src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Invalid/UnloadableBundleClass4/InvalidUnloadableBundleClass4.php
<?php

namespace Invalid\UnloadableBundleClass4;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class UnexpectedClassName
{
    /*
     * Unloadable because the class name doesn't
     * match the class file
     */
}